<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgound"
    tools:context=".Customer.PayAndConfirmActivity">



    <!-- Back Button -->
    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/backicon"
        android:contentDescription="Back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <!-- Header Title -->
    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x_c_nh_n_v_thanh_to_n"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@id/ivBack"
        app:layout_constraintTop_toTopOf="@id/ivBack"
        android:layout_marginStart="16dp" />

    <!-- Work Location Section -->
    <TextView
        android:id="@+id/location_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/v_tr_l_m_vi_c"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/header_title"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/location_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_background"
        android:padding="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/location_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/baseline_location_pin_24"
                app:tint="@android:color/holo_red_dark" />

            <TextView
                android:id="@+id/locationtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="65 Đường 339, Phước Long B, Tp. Thủ Đức, Tp.HCM"
                android:textSize="16sp"
                android:textColor="@android:color/black" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp"
            >

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/customer"
                app:tint="@android:color/holo_red_dark" />

            <TextView
                android:id="@+id/username2"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:layout_marginStart="16dp"
                android:text="Trần Việt Đức"
                android:textSize="16sp"
                android:textColor="@android:color/black" />
            <Button
                android:id="@+id/change_location_btn"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="#4CAF50"
                android:text="Thay đổi"
                android:textColor="@android:color/white"
                android:layout_marginStart="150dp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0886542959"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="-10dp"
            android:layout_marginStart="45dp"/>


    </LinearLayout>

    <!-- Work Info Section -->
    <TextView
        android:id="@+id/work_info_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/th_ng_tin_c_ng_vi_c"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/location_details"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Payment Method Section -->
    <LinearLayout
        android:id="@+id/work_info_details"
        android:layout_width="477dp"
        android:layout_height="327dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_background"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/work_info_title">

        <TextView
            android:id="@+id/work_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dọn dẹp nhà"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/work_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="Dọn dẹp cơ bản - Trên 100m2"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Ngày làm việc: 25/09/2024"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="Thời gian làm việc: 15h30"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="Ghi chú"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtNote"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_background"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/payment_method_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ph_ng_th_c_thanh_to_n"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/work_info_details"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup android:id="@+id/payment_method_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/payment_background"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/payment_method_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        android:gravity="center">
        <RadioButton
            android:id="@+id/rdoTienMat"
            android:layout_width="40dp"
            android:layout_height="40dp" />
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_cash" />
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ti_n_m_t"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginStart="16dp" />
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/zalopay" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Zalo"
            android:textSize="16sp"
            android:textColor="@android:color/holo_orange_dark"
            android:layout_marginStart="16dp" />
        <RadioButton
            android:id="@+id/rdoZalo"
            android:layout_width="24dp"
            android:layout_height="24dp" />
    </RadioGroup>

    <!-- Total Amount and Confirm Button -->
    <LinearLayout
        android:id="@+id/total_amount_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tổng cộng"
            android:textSize="25sp"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="750.000đ"
            android:textSize="30sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            />

        <Button
            android:id="@+id/btnPostJob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:backgroundTint="#05990B"
            android:text="Xác nhận"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
